# blow-up-jobs

./: Cargo.toml  REFERENCES.md  a.txt  flake.nix  rust-toolchain.toml
.github/: FUNDING.yml
src/: animation.rs  app.rs  events.rs  job.rs  main.rs  theme.rs  ui.rs  variadicts.rs  vterm.rs
src/ui/: common.rs  intro_overlay.rs  job.rs  popup.rs  sidebar.rs
src/ui/popup/: edit.rs  new_job.rs  rename.rs
