[package]
name = "buj"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
futures = "0.3.31"
portable-pty = "0.9.0"
ratatui = { version = "0.29.0", features = ["macros", "scrolling-regions", "underline-color"] }
rustix = { version = "1.1.2", features = ["process"] }
shellish_parse = "2.2.0"
thiserror = "2.0.16"
tokio = { version = "1.47.1", features = ["full", "mio"] }
vt100 = "0.15.2"
